Harden Echo paths for RoboVM and improve echo boss diagnostics.
Derive armed boss state from pending echo data, report prefetch failures, show Echo usernames on the boss bar, and replace JDK APIs RoboVM lacks.

Co-authored-by: Cursor <cursoragent@cursor.com>